[package]
name = "sortnet"
version = "0.1.0"
authors = ["Marco Neumann <marco@crepererum.net>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = [
    "sorting",
]
categories = ["algorithms"]
description = "Sorting Networks for Rust"
repository = "https://github.com/crepererum/sortnet.rs"
documentation = "https://docs.rs/sortnet/"
readme = "README.md"

[dependencies]
arrayref = "0.3"
static_assertions = "1"

[dev-dependencies]
criterion = "0.3"
itertools = "0.8"
rand = "0.7"

[[bench]]
name = "bench"
harness = false
